<resources>
    <string name="app_name">Calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="del">Del</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="divide">/</string>
    <string name="percent">%</string>
    <string name="multiply">X</string>
    <string name="minus">-</string>
    <string name="addition">+</string>
    <string name="equal">=</string>
    <string name="point">.</string>
    <string name="sin">Sin</string>
    <string name="cos">Cos</string>
    <string name="tan">Tan</string>
    <string name="ln">ln</string>
    <string name="e">e</string>
    <string name="exclam">!</string>
    <string name="log">log</string>
    <string name="opening">(</string>
    <string name="closing">)</string>
    <string name="scientific">Change</string>
</resources>
