<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button_material_light"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1.0"
    tools:context=".MainActivity"
    android:id="@+id/main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_material_light"
        android:orientation="horizontal"
        android:layout_weight="0.5"
        >
        <EditText
            android:id="@+id/screen"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:text=""
            android:textSize="25sp" />
    </LinearLayout>
    <Button
        android:layout_width="98dp"
        android:layout_height="76dp"
        android:layout_gravity="end"
        android:text="@string/del"
        android:textSize="25sp"
        android:id="@+id/del"
        android:layout_weight="0.2"
        />

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:columnCount="4"
        android:rowCount="4"
        android:useDefaultMargins="true"

        >
        <Button
            android:text="@string/seven"
            android:id="@+id/seven"
            style="@style/attributes"
            />
        <Button
            android:text="@string/eight"
            android:id="@+id/eight"
            style="@style/attributes"
            />
        <Button
            android:text="@string/nine"
            android:id="@+id/nine"
            style="@style/attributes"
            />
        <Button
            android:text="@string/divide"
            android:id="@+id/divide"
            style="@style/attributes"
            />

        <Button
            android:text="@string/four"
            android:id="@+id/four"
            style="@style/attributes"
            />
        <Button
            android:text="@string/five"
            android:id="@+id/five"
            style="@style/attributes"
            />
        <Button
            android:text="@string/six"
            android:id="@+id/six"
            style="@style/attributes"
            />
        <Button
            android:text="@string/multiply"
            android:id="@+id/multiply"
            style="@style/attributes"
            />
        <Button
            android:text="@string/one"
            android:id="@+id/one"
            style="@style/attributes"
            />
        <Button
            android:text="@string/two"
            android:id="@+id/two"
            style="@style/attributes"
            />
        <Button
            android:text="@string/three"
            android:id="@+id/three"
            style="@style/attributes"
            />
        <Button
            android:text="@string/minus"
            android:id="@+id/minus"
            style="@style/attributes"
            />
        <Button
            android:text="@string/point"
            android:id="@+id/point"
            style="@style/attributes"
            />
        <Button
            android:text="@string/zero"
            android:id="@+id/zero"
            style="@style/attributes"
            />
        <Button
            android:text="@string/equal"
            android:id="@+id/equal"
            style="@style/attributes"
            />
        <Button
            android:text="@string/addition"
            android:id="@+id/addition"
            style="@style/attributes"
            />
    </GridLayout>

</LinearLayout>