<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button_material_light"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1.0"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_material_light"
        android:orientation="horizontal"
        android:layout_weight="0.5">
        <EditText
            android:id="@+id/screen1"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:text=""
            android:textSize="25sp" />
    </LinearLayout>
    <Button
        android:layout_width="98dp"
        android:layout_height="76dp"
        android:layout_gravity="end"
        android:text="@string/del"
        android:textSize="25sp"
        android:id="@+id/del"
        android:layout_weight="0.2"
        />
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4"
        android:useDefaultMargins="false"
        android:layout_weight="0.4"
        >
        <Button
            android:text="@string/sin"
            android:id="@+id/sin"
            style="@style/scientific"
            />
        <Button
            android:text="@string/cos"
            android:id="@+id/cos"
            style="@style/scientific"
            />
        <Button
            android:text="@string/tan"
            android:id="@+id/tan"
            style="@style/scientific"
            />
        <Button
            android:text="@string/ln"
            android:id="@+id/ln"
            style="@style/scientific"
            />

        <Button
            android:text="@string/log"
            android:id="@+id/log"
            style="@style/scientific"
            />
        <Button
            android:text="π"
            style="@style/scientific"
            android:id="@+id/pie"
            />
        <Button
            android:text="@string/e"
            android:id="@+id/e"
            style="@style/scientific"
            />
        <Button
            android:text="@string/percent"
            android:id="@+id/percent"
            style="@style/scientific"
            />
        <Button
            android:text="@string/exclam"
            android:id="@+id/exclam"
            style="@style/scientific"
            />
        <Button
            android:text="√"
            android:id="@+id/root"
            style="@style/scientific" />
        <Button
            android:text="^"
            android:id="@+id/power"
            style="@style/scientific"

            />
        <Button
            android:text="@string/opening"
            android:id="@+id/opening"
            style="@style/scientific"
            />
        <Button
            android:text="@string/closing"
            android:id="@+id/closing"
            style="@style/scientific"
            />
        <Button
            android:text=""
            style="@style/scientific"
            />
        <Button
            android:text=""
            style="@style/scientific"
            />
        <Button
            android:text=""
            style="@style/scientific"
            />
    </GridLayout>
</LinearLayout>